--- a/less/components/feedback.less
+++ b/less/components/feedback.less
@@ -9,7 +9,7 @@
 }
 
 .feedback__description {
-  padding: 0 20px 17px;
+  padding: 0 6.3% 17px;
   font: normal 14px/24px @font-family;
   text-align: center;
   border-bottom: 1px solid @gray;
@@ -17,7 +17,7 @@
 
 @media (min-width: @tablet-width) {
   .feedback {
-    padding: 72px 60px 61px;
+    padding: 72px 7.8% 61px;
   }
 
   .feedback__title {
