--- a/less/components/modal-failure.less
+++ b/less/components/modal-failure.less
@@ -9,7 +9,7 @@
   padding: 40px 20px 0;
   text-align: center;
   background: #ffffff;
-  box-shadow: 0 7px 15px rgba(0, 1, 1, 0.15);
+  box-shadow: 0 3px 15px 5px rgba(0, 1, 1, 0.15);
 }
 
 .modal-failure__title {
@@ -32,7 +32,7 @@
 @media (min-width: @tablet-width) {
   .modal-failure {
     width: 400px;
-    padding: 51px 60px 49px;
+    padding: 51px 45px 49px;
   }
 
   .modal-failure__title {
