--- a/less/components/radio.less
+++ b/less/components/radio.less
@@ -1,5 +1,5 @@
 .radio {
-  padding: 18px 20px 15px;
+  padding: 18px 6.3% 15px;
 }
 
 .radio__wrapper {
@@ -54,7 +54,7 @@
 @media (min-width: @tablet-width) {
   .radio {
     order: -1;
-    width: 324px;
+    width: 50%;
     padding: 0;
     border-right: 1px solid #dbdbdb;
   }
@@ -74,7 +74,6 @@
 
 @media (min-width: @desktop-width) {
   .radio {
-    width: 480px;
     padding-left: 4px;
   }
 }
