--- a/less/components/user-information.less
+++ b/less/components/user-information.less
@@ -1,5 +1,5 @@
 .user-information {
-  padding: 18px 20px 24px;
+  padding: 18px 6.3% 24px;
 }
 
 .user-information__wrapper {
@@ -34,15 +34,14 @@
 
 @media (min-width: @tablet-width) {
   .user-information {
-    width: 324px;
+    width: 50%;
     padding: 0;
-    padding-left: 58px;
+    padding-left: 9%;
   }
 }
 
 @media (min-width: @desktop-width) {
   .user-information {
-    width: 480px;
     padding-left: 80px;
   }
 }
