--- a/less/style.less
+++ b/less/style.less
@@ -1,26 +1,26 @@
 @import "reset.less";
 @import "var-mix.less";
 @import "scaffolding.less";
-@import "blocks/button.less";
-@import "blocks/page-header.less";
-@import "blocks/site-list.less";
-@import "blocks/page-footer.less";
-@import "blocks/social.less";
-@import "blocks/copyright.less";
-@import "blocks/intro.less";
-@import "blocks/reasons.less";
-@import "blocks/recommendations.less";
-@import "blocks/hotel-search.less";
-@import "blocks/feedback.less";
-@import "blocks/form.less";
-@import "blocks/user-information.less";
-@import "blocks/contacts.less";
-@import "blocks/radio.less";
-@import "blocks/checkbox.less";
-@import "blocks/textarea.less";
-@import "blocks/media.less";
-@import "blocks/photo.less";
-@import "blocks/video.less";
-@import "blocks/modal-failure.less";
-@import "blocks/modal-success.less";
-@import "blocks/placeholder-style.less";
+@import "components/button.less";
+@import "components/page-header.less";
+@import "components/site-list.less";
+@import "components/page-footer.less";
+@import "components/social.less";
+@import "components/copyright.less";
+@import "components/intro.less";
+@import "components/reasons.less";
+@import "components/recommendations.less";
+@import "components/hotel-search.less";
+@import "components/feedback.less";
+@import "components/form.less";
+@import "components/user-information.less";
+@import "components/contacts.less";
+@import "components/radio.less";
+@import "components/checkbox.less";
+@import "components/textarea.less";
+@import "components/media.less";
+@import "components/photo.less";
+@import "components/video.less";
+@import "components/modal-failure.less";
+@import "components/modal-success.less";
+@import "components/placeholder-style.less";
