--- a/less/components/checkbox.less
+++ b/less/components/checkbox.less
@@ -1,7 +1,7 @@
 .checkbox {
   display: flex;
   flex-direction: column;
-  padding: 18px 20px 2px;
+  padding: 18px 6.3% 2px;
 }
 
 .checkbox__wrapper {
@@ -58,28 +58,17 @@
 @media (min-width: @tablet-width) {
   .checkbox {
     flex-direction: row;
-    position: relative;
-    z-index: 1;
     flex-wrap: wrap;
     justify-content: center;
     width: 100%;
     padding: 0;
     padding-top: 28px;
     margin-bottom: 69px;
-
-    &::before {
-      .pseudo-element();
-      top: 53px;
-      z-index: 1;
-      width: 100%;
-      height: 1px;
-      background: #dbdbdb;
-    }
   }
 
   .checkbox__wrapper {
-    width: 258px;
-    padding-left: 30px;
+    width: 39.8%;
+    padding-left: 4.6%;
     margin-bottom: 0;
   }
 
