--- a/less/components/contacts.less
+++ b/less/components/contacts.less
@@ -1,5 +1,5 @@
 .contacts {
-  padding: 18px 20px 3px;
+  padding: 18px 6.3% 3px;
 }
 
 .contacts__wrapper {
@@ -53,20 +53,9 @@
 
 @media (min-width: @tablet-width) {
   .contacts {
-    position: relative;
-    z-index: 1;
     width: 100%;
     margin-top: 70px;
     padding: 0;
-
-    &::before {
-      .pseudo-element();
-      top: 12px;
-      z-index: 1;
-      width: 100%;
-      height: 1px;
-      background: #dbdbdb;
-    }
   }
 
   .contacts__label {
