--- a/less/components/form.less
+++ b/less/components/form.less
@@ -33,7 +33,8 @@
 }
 
 .form__button {
-  width: 280px;
+  width: 87.5%;
+  max-width: 350px;
   margin: 0 auto;
   padding: 16px 10px;
   font: bold 21px/26px @font-family;
@@ -67,26 +68,74 @@
 
   .form__title--contacts {
     position: relative;
-    z-index: 2;
-    width: 400px;
-    margin: 0 auto 24px;
+    width: 100%;
+    margin-bottom: 24px;
     background: #ffffff;
+
+    &::before,
+    &::after {
+      .pseudo-element();
+      top: 12px;
+      width: 19.3%;
+      height: 1px;
+      background: #dbdbdb;
+    }
+
+    &::before {
+      left: 0;
+    }
+
+    &::after {
+      right: 0;
+    }
   }
 
   .form__title--checkbox {
     position: relative;
-    z-index: 2;
-    width: 400px;
+    width: 100%;
     margin-bottom: 41px;
     background: #ffffff;
+
+    &::before,
+    &::after {
+      .pseudo-element();
+      top: 25px;
+      width: 19.3%;
+      height: 1px;
+      background: #dbdbdb;
+    }
+
+    &::before {
+      left: 0;
+    }
+
+    &::after {
+      right: 0;
+    }
   }
 
   .form__title--textarea {
     position: relative;
-    z-index: 2;
-    width: 400px;
-    margin: 0 auto 57px;
+    width: 100%;
+    margin-bottom: 57px;
     background: #ffffff;
+
+    &::before,
+    &::after {
+      .pseudo-element();
+      top: 12px;
+      width: 19.3%;
+      height: 1px;
+      background: #dbdbdb;
+    }
+
+    &::before {
+      left: 0;
+    }
+
+    &::after {
+      right: 0;
+    }
   }
 
   .form__title--user-information,
@@ -107,6 +156,7 @@
 
   .form__button {
     width: 50%;
+    max-width: none;
     margin: 0;
     margin-right: auto;
     padding: 16px 21px 16px 10px;
@@ -127,47 +177,26 @@
   }
 
   .form__title--contacts {
-    width: 100%;
     padding: 0 280px;
     margin: 0 auto 74px;
 
     &::before,
     &::after {
-      .pseudo-element();
-      top: 12px;
       width: 280px;
-      height: 1px;
-      background: #dbdbdb;
-    }
-
-    &::before {
-      left: 0;
-    }
-
-    &::after {
-      right: 0;
     }
   }
 
   .form__title--checkbox {
-    width: 100%;
-    padding: 0 300px;
-
     &::before,
     &::after {
-      .pseudo-element();
-      top: 25px;
       width: 280px;
-      height: 1px;
-      background: #dbdbdb;
     }
+  }
 
-    &::before {
-      left: 0;
-    }
-
+  .form__title--textarea {
+    &::before,
     &::after {
-      right: 0;
+      width: 280px;
     }
   }
 
