--- a/less/components/modal-success.less
+++ b/less/components/modal-success.less
@@ -9,7 +9,7 @@
   padding: 42px 20px 0;
   text-align: center;
   background: #ffffff;
-  box-shadow: 0 7px 15px rgba(0, 1, 1, 0.15);
+  box-shadow: 0 3px 15px 5px rgba(0, 1, 1, 0.15);
 }
 
 .modal-success__title {
