--- a/less/components/textarea.less
+++ b/less/components/textarea.less
@@ -1,5 +1,5 @@
 .textarea {
-  padding: 18px 20px 45px;
+  padding: 18px 6.3% 45px;
   border-bottom: none;
 }
 
@@ -15,20 +15,9 @@
 
 @media (min-width: @tablet-width) {
   .textarea {
-    position: relative;
-    z-index: 1;
     width: 100%;
     margin-bottom: 52px;
     padding: 0;
-
-    &::before {
-      .pseudo-element();
-      top: 12px;
-      z-index: 1;
-      width: 100%;
-      height: 1px;
-      background: #dbdbdb;
-    }
   }
 
   .textarea__input {
